[package]
name = "provisioner"
version = "0.4.0"
edition = "2021"
description = "Provision Mammoth-ready Minecraft clusters with ease!"

[dependencies]
bytes = "1.1.0"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
clap_generate = "3.0.0-rc.8"
cmd_lib = "1.3.0"
color-eyre = "0.5.11"
copy_dir = "0.1.2"
fs_extra = "1.2.0"
once_cell = "1.8.0"
reqwest = { version = "0.11.7", features = ["json", "blocking"] }
serde = { version = "1.0.131", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
