[package]
name = "provisioner"
version = "0.6.0"
edition = "2021"
description = "Provision Mammoth-ready Minecraft clusters with ease!"

[dependencies]
bytes = "1.1.0"
clap = { version = "3.0.0", features = ["derive"] }
clap_complete = "3.0.0"
cmd_lib = "1.3.0"
color-eyre = "0.5.11"
fs_extra = "1.2.0"
once_cell = "1.9.0"
reqwest = { version = "0.11.8", features = ["json", "blocking"] }
serde = { version = "1.0.133", features = ["derive"] }
strum = "0.23.0"
strum_macros = "0.23.1"
thiserror = "1.0.30"
toml = "0.5.8"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
wait-timeout = "0.2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
